# bt_patrol_NIRA

./: CMakeLists.txt  README.md  bt_truncate_custom.xml  package.xml
config/: bt_tree.xml  hcs_config.yaml  second_bt.xml  third_bt.xml
custom/: bt_truncate_custom.xml
include/hcs_bt_pkg/: always_running.hpp  check_plugin.hpp  goal_create_plugin.hpp  nav_to_pose_plugin.hpp
include/test_cpp/: bt_action_vlm.hpp  vlm_client_onh.hpp
launch/: hcs_general.launch.py  hcs_nav.launch.py  hcs_nav_launch.launch.py
ntarobot_navigation/: CMakeLists.txt
ntarobot_navigation/launch/: ntarobot_nav.launch.py
ntarobot_navigation/maps/: ctXIII.pgm  ctXIII.yaml  hcsLab.pgm  hcsLab.yaml
ntarobot_navigation/params/: bt_configuration.xml  nav2_params.yaml  ntarobot_custom.yaml  ntarobot_nav_following.yaml  ntarobot_nav_params_real.yaml
params/: hcs_config.yaml
src/: always_running.cpp  bt_action_vlm.cpp  bt_nodes_registration.cpp  check_plugin.cpp  goal_create_plugin.cpp  main_bt.cpp  main_bt_nav_ntegration.cpp  nav_to_pose_plugin.cpp  simple_publisher.cpp  vlm_client.cpp  vlm_client_once.cpp  vlm_client_onh.cpp
